# discord_moon_robot_game

./: pyproject.toml
src/: main.py  test_code  test_level
src/bot/: robotbot.py
src/bot/commands/: about.py  challenges.py
src/game/: board.py  exceptions.py  robot_game.py  tile.py  utils.py
src/game/coding/: commands.py  program.py
